--- a/_posts/2016-08-22-南大、清华、北大、上交、复旦、北航、哈工大、中科院保研受苦记.markdown
+++ b/_posts/2016-08-22-南大、清华、北大、上交、复旦、北航、哈工大、中科院保研受苦记.markdown
@@ -6,4 +6,34 @@ date: 2016-04-04 15:32:24.000000000 +09:00
 
 ## 前言
 
-7月23号从中科院软件所参加完夏令营回来，我的漫长的保研路也算是告一段落。
+7月23号从中科院软件所参加完夏令营回来，我的漫长的保研路也算是告一段落。8月12号东软实训结束，8月13号坐上回家的火车，8月14号到家，然后就一直无所事事到现在
+
+## 个人基本情况
+
+## 我的保研路
+
+### 报名参加过的夏令营
+
+#### 南大
+
+#### 复旦
+
+#### 北航
+
+#### 哈工大
+
+#### 中科院软件所
+
+### 报名未能参加的夏令营
+
+#### 清华
+
+#### 北大
+
+#### 上交
+
+#### 中科院计算所
+
+#### 华科
+
+## 一些体会
