--- a/_posts/2016-08-22-南大、清华、北大、上交、复旦、北航、哈工大、中科院保研受苦记.markdown
+++ b/_posts/2016-08-22-南大、清华、北大、上交、复旦、北航、哈工大、中科院保研受苦记.markdown
@@ -6,34 +6,49 @@ date: 2016-04-04 15:32:24.000000000 +09:00
 
 ## 前言
 
-7月23号从中科院软件所参加完夏令营回来，我的漫长的保研路也算是告一段落。8月12号东软实训结束，8月13号坐上回家的火车，8月14号到家，然后就一直无所事事到现在
+7月23号从中科院软件所参加完夏令营回来，我的漫长的保研路也算是告一段落。
+
+8月12号东软实训结束，8月13号坐上回家的火车，8月14号到家，然后就一直吃喝睡到今天，拿回来的几本书也没看几眼，本来打算着回来继续充实一下，去备战9，10月份的推免，现在看来时间又都荒废了......开学还是乖乖到学校吧，再这样下去一直待在家感觉要成废人一个了，我还是喜欢忙碌充实的感觉。
+
+一直想着要把这次宝贵的保研经历记录一下，好给学弟学妹一个参考。学弟学妹们可以结合自身情况，大概了解一下保研流程，部分学校保研考核要求，从而少走一些弯路，去到自己理想中的学校。
 
 ## 个人基本情况
+把我的个人情况大概说一下，学弟学妹可以对比自己情况，有个参考。
+- 绩点排名：5/262
+- 四级：611
+- 六级：503
+- 科研竞赛情况：无科研，无论文，无国奖，无励志奖学金，无ACM，仅有一个蓝桥和美赛SP（其实没什么价值），总的来说也就是成绩好一点，但有时候高的成绩排名会是一个很好的敲门砖。
+
+## 为什么我要保研
+
+本来我是做iOS开发的，想要毕业后直接找工作，不准备读研的。但是直到大三上学期的时候通过和学长学姐交流，我才了解到保研夏令营这一回事，由于学长学姐都去了很好的高校读研，而且当时我的排名还不错，于是我思考了好长时间，权衡了读研和找工作的利弊，我决定毕业后继续读研。如果有同样疑惑的学弟学妹，我的建议是：能出国的话，那肯定出国；能保研的话，那肯定最好不要放弃这个来之不易的机会，当然这也不是绝对的。
 
 ## 我的保研路
 
 ### 报名参加过的夏令营
 
-#### 南大
+#### 1. 南大
 
-#### 复旦
 
-#### 北航
 
-#### 哈工大
+#### 2. 复旦
 
-#### 中科院软件所
+#### 3. 北航
+
+#### 4. 哈工大
+
+#### 5. 中科院软件所
 
 ### 报名未能参加的夏令营
 
-#### 清华
+#### 1. 清华
 
-#### 北大
+#### 2. 北大
 
-#### 上交
+#### 3. 上交
 
-#### 中科院计算所
+#### 4. 中科院计算所
 
-#### 华科
+#### 5. 华科
 
 ## 一些体会
