--- a/_posts/2016-08-22-南大、清华、北大、上交、复旦、北航、哈工大、中科院保研受苦记.markdown
+++ b/_posts/2016-08-22-南大、清华、北大、上交、复旦、北航、哈工大、中科院保研受苦记.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 南大、清华、北大、上交、复旦、北航、哈工大、中科院保研受苦记
+title: 南大、清华、北大、上交、复旦、北航、哈工大、中科院保研记
 date: 2016-04-04 15:32:24.000000000 +09:00
 ---
 
@@ -14,9 +14,10 @@ date: 2016-04-04 15:32:24.000000000 +09:00
 
 ## 个人基本情况
 把我的个人情况大概说一下，学弟学妹可以对比自己情况，有个参考。
+
 - 绩点排名：5/262
-- 四级：611
-- 六级：503
+- 四级：611分
+- 六级：503分
 - 科研竞赛情况：无科研，无论文，无国奖，无励志奖学金，无ACM，仅有一个蓝桥和美赛SP（其实没什么价值），总的来说也就是成绩好一点，但有时候高的成绩排名会是一个很好的敲门砖。
 
 ## 为什么我要保研
