--- a/_posts/2016-08-22-南大、清华、北大、上交、复旦、北航、哈工大、中科院保研受苦记.markdown
+++ b/_posts/2016-08-22-南大、清华、北大、上交、复旦、北航、哈工大、中科院保研受苦记.markdown
@@ -28,17 +28,49 @@ date: 2016-04-04 15:32:24.000000000 +09:00
 
 ### 报名参加过的夏令营
 
-#### 1. 南大
+这一部分是我报名相应学校夏令营后，对方给予我入营资格的学校，以下是按参加顺序记录：
 
+#### 1. 南大计算机
 
+- 网址：[南京大学计算机系2016“本科生开放日”申请流程](http://cs.nju.edu.cn/ee/57/c1654a126551/page.htm)
 
-#### 2. 复旦
+- 时间：5月13日-5月15日
 
-#### 3. 北航
+- 入营条件：985院校的话，绩点排名前5%基本可以入营
 
-#### 4. 哈工大
+- 参营记录：
+
+  南大的夏令营是开的最早的一个计算机夏令营，正因为开的早，很多同学都蠢蠢欲试，导致南大夏令营会有很多同学报名，这次有1000多个报名的，但是最后入营的只有300人，但只要绩点排名前5%基本可以入营。
+
+  如果你想要之后从事”机器学习与数据挖掘“相关领域的科研工作，那么南大的[LAMDA实验室](http://lamda.nju.edu.cn/CH.MainPage.ashx)一个再好不过的选择了，由周志华教授作为带头人，南大的这个实验室在国内外上知名度很高，科研能力也很厉害。
+
+  但是LAMDA实验室是**单独招生的**，每年会有两批的保研生申请，所以要想申请LAMDA实验室，还需要在申请南大夏令营之外单独申请这个实验室的面试考核。申请的时候需要一份简历，一份研究动机说明，一份成绩单，这三份材料是让对方了解你的唯一途径，所以需要好好准备润色，虽然我是在截止日期前一天才急急忙忙的才提交的，但还是进入了初选，拿到了LAMDA实验室的面试资格。LAMDA实验室会在南大夏令营前一天组织面试，而且给报销往返车票及一晚的住宿费，还是很不错的。
+
+  下面说一下LAMDA大概的面试流程及问题。在申报LAMDA实验室之前会填三个导师志愿，我当时填的周志华、吴建鑫、俞扬，但到了现场才知道LAMDA会把你的材料给所填报的三个老师，他们分别决定是否允许你参加他们每个人的面试，如果有老师允许你面试，那么你就拿到了面试资格，否则的话，说明没有老师看上你的简历，你也就没有面试资格。所以在填报导师的时候，除非自己简历特别光鲜，那么那种特别牛老师就不要填了，相当于浪费一个机会。
+
+#### 2. 复旦计算机
+
+- 网址：
+- 时间：
+- 参营记录：
+
+#### 3. 北航计算机
+
+- 网址：
+- 时间：
+- 参营记录：
+
+#### 4. 哈工大计算机
+
+- 网址：
+- 时间：
+- 参营记录：
 
 #### 5. 中科院软件所
+
+- 网址：
+- 时间：
+- 参营记录：
 
 ### 报名未能参加的夏令营
 
