--- a/_posts/2016-08-22-南大、清华、北大、上交、复旦、北航、哈工大、中科院保研受苦记.markdown
+++ b/_posts/2016-08-22-南大、清华、北大、上交、复旦、北航、哈工大、中科院保研受苦记.markdown
@@ -42,11 +42,50 @@ date: 2016-04-04 15:32:24.000000000 +09:00
 
   南大的夏令营是开的最早的一个计算机夏令营，正因为开的早，很多同学都蠢蠢欲试，导致南大夏令营会有很多同学报名，这次有1000多个报名的，但是最后入营的只有300人，但只要绩点排名前5%基本可以入营。
 
-  如果你想要之后从事”机器学习与数据挖掘“相关领域的科研工作，那么南大的[LAMDA实验室](http://lamda.nju.edu.cn/CH.MainPage.ashx)一个再好不过的选择了，由周志华教授作为带头人，南大的这个实验室在国内外上知名度很高，科研能力也很厉害。
+  如果你想要之后从事”机器学习与数据挖掘“相关领域的科研工作，那么南大的[LAMDA实验室](http://lamda.nju.edu.cn/CH.MainPage.ashx)是一个再好不过的选择了，由周志华教授作为带头人，南大的这个实验室在国内外上知名度很高，科研能力也很厉害。
 
   但是LAMDA实验室是**单独招生的**，每年会有两批的保研生申请，所以要想申请LAMDA实验室，还需要在申请南大夏令营之外单独申请这个实验室的面试考核。申请的时候需要一份简历，一份研究动机说明，一份成绩单，这三份材料是让对方了解你的唯一途径，所以需要好好准备润色，虽然我是在截止日期前一天才急急忙忙的才提交的，但还是进入了初选，拿到了LAMDA实验室的面试资格。LAMDA实验室会在南大夏令营前一天组织面试，而且给报销往返车票及一晚的住宿费，还是很不错的。
 
-  下面说一下LAMDA大概的面试流程及问题。在申报LAMDA实验室之前会填三个导师志愿，我当时填的周志华、吴建鑫、俞扬，但到了现场才知道LAMDA会把你的材料给所填报的三个老师，他们分别决定是否允许你参加他们每个人的面试，如果有老师允许你面试，那么你就拿到了面试资格，否则的话，说明没有老师看上你的简历，你也就没有面试资格。所以在填报导师的时候，除非自己简历特别光鲜，那么那种特别牛老师就不要填了，相当于浪费一个机会。
+  下面说一下LAMDA大概的面试流程及问题。在申报LAMDA实验室之前会填三个导师志愿，我当时填的周志华、吴建鑫、俞扬，但到了现场才知道LAMDA会把你的材料给所填报的三个老师，他们分别决定是否允许你参加他们每个人的面试，如果有老师允许你面试，那么你就拿到了面试资格，否则的话，说明没有老师看上你的简历，你也就没有面试资格。所以在填报导师的时候，除非自己简历特别光鲜，那么那种特别牛老师就不要填了，相当于浪费一个机会。在面试的时候，你会先去面试选中你的老师，面试完之后，你其实可以再去面试其他该实验室的老师，即使你当时没有报他的研究生，从而增加你进入该实验室的机会。我5月12号参加的面试，当时只有吴建鑫老师给了我面试机会，面试完他之后我又去找了詹德川老师，最后我是被詹德川老师录取。面试吴建鑫老师的时候，问题如下：
+
+  - 方差的计算方法，他会提前写好一个方差表达式问你对不对，如果不对的话请写出正确的表达式；
+  - 方差中的n-1含义；
+  - 如果写一个程序计算方差，那么计算一次内存访问几次；
+  - 本科做过的项目，项目内容；
+  - 机器学习了解多少，看过什么；
+  - 了不了解本人是做什么研究的。
+
+  面试詹德川老师的时候，我不知道其他人是什么情况，但我是全程英文面试，问到的问题如下，**注意：一下问题需要英文作答，是在英语大不了，可以中文，不必有太大压力**：
+
+  - 自我介绍一下；
+  - 介绍一下做过的项目；
+  - 介绍一下梯度下降法是什么；
+  - 介绍一下牛顿迭代是什么；
+  - 什么事特征值，特征值的含义；
+  - 唠嗑。
+
+  面试完当天晚上就会有邮件通知是否面试通过，最后我是被詹德川老师录取，但是通过LAMDA面试并不代表你就能100%能进入LAMDA读研了，最重要的一关是拿到南大夏令营的优秀营员，只有这样，通过两轮考核才能进入LAMDA。
+
+  下面说一下南大夏令营的流程，主要的就是三部分：各个实验室介绍、机试、面试，其中最最重要的是机试，只要机试通过，90%就能拿到优秀营员。
+
+  机试这次一共4道题，以前听说6道题，只要AC出其中的两道题就肯定没问题了，多做无用，有罚时，考核方式：OJ，题型：算法+数据结构，难度：ACM一般难度的题。这次的具体题目如下：
+
+  - 最大子串和；
+  - 无向图最长路径
+  - 表达式求值；
+  - 给一棵树求最长的路径。
+
+  面试问题如下（由于分组面试，每个人问题不一样）：
+
+  - 解释一下什么是时间复杂度；
+  - 快排的时间复杂度；
+  - 快排最坏时间复杂度为什么是$O(n^2)$，如何优化快排最坏时间复杂度；
+  - 看成绩单，问如何进行文献检索
+  - 英文回答：如何利用文献检索知识去检索一个机器学习的问题
+
+  15号上午面试完毕，提交完材料，填完导师志愿，下午就可以走了，导师志愿基本只有第一志愿有用，而且有些导师有一个点招权（反正我目前貌似只知道黄宜华老师有点招权点招了我身边好多同学，但他们都拒绝了。。。他是搞大数据很厉害的一个老师，如果对这方面感兴趣，成绩排名又靠前的话，千万记住找这个老师报名，多一个机会！）。
+
+  南大之旅也就这样结束了，接下来会在官网上公布优秀营员的名单。
 
 #### 2. 复旦计算机
 
