--- a/_posts/2016-08-22-南大、清华、北大、上交、复旦、北航、哈工大、中科院保研受苦记.markdown
+++ b/_posts/2016-08-22-南大、清华、北大、上交、复旦、北航、哈工大、中科院保研受苦记.markdown
@@ -107,9 +107,38 @@ date: 2016-08-22 15:32:24.000000000 +09:00
 
   - 学术报告。将邀请在学术研究方面有建树的教师进行学术报告，介绍计算机科学技术学院和软件学院最新的研究方向和研究成果，为期2天；
   - 课题组的学术讨论。进入感兴趣的课题组和老师进行进一步的交流，参加课题组的科研活动； 可以提前联系导师，趁早去找老师唠一唠，让他认识你，了解你，而最好在面试之前就定下导师，否则面试会减分；
-  - 考核。上午机试，下午面试，面试的时候分两组，每组5个老师，老师手中会有你的机试成绩，所以机试好的话，给老师印象会很好。
+  - 考核。上午机试，下午面试，面试的时候分两组，每组5个老师，老师手中会有你的机试成绩，所以机试好的话，给老师印象会很好，也就是说只要机试分数高，进复旦就容易很多了。
 
-  ​
+  复旦搞计算机视觉和媒体（视频、图片）大数据分析的居多，基本很多老师都在围绕这个来展开科研工作的。
+
+  下面说一下机试。机试这次和以往完全不一样，虽然也是OJ，但这次是给你3个大题，每个大题中有3个小题，每个小题之间的区别就是约束条件和数据量级不同，对应的题目难易程度也是不一样的，所以和ACM的题型还不太一样。具体题目记得不太清楚，大概如下：
+
+  - 第一题类似迷宫问题，利用BFS求解，一个n*n个方格组成的方阵，里面可能有若干个门，每个门对应着一把钥匙，钥匙会出现在某个方格中，所以要想开门就必须先把钥匙拿到，你需要给出从起点到终点的可能路径之和，迷宫会有多种多样。三个小问分别是：
+
+
+  - 对于1*n的迷宫，求出问题的解。
+  - 对于n*n的迷宫，没有门，求出问题的解。
+  - 对于n*n的迷宫，有门，求出问题解。
+
+
+  - 第二题貌似是车过桥问题，由于桥有限高，所以车需要有不同的装载方案来过不同的桥，貌似需要求解出装载方案，这个题没有仔细看。
+  - 第三题很常规的一道ACM字符串题目，具体题目记不太清，但是主要考察你在特别大的数量级下能否在规定时间内求出解。
+
+  下面说一下面试。面试分两组，而且有专业面试和英语面试两个环节，每组同学到相应的组面试，面试问题大概如下：
+
+  - 专业面试：
+    - 自我介绍；
+    - 介绍项目，做过什么，项目具体内容是什么；
+    - 机器学习了解多少，如何学习的；
+    - 说一下神经网络的优点缺点；
+    - 自我感觉机试做的怎么样；
+    - 学院院长是谁；
+    - 选好导师没有。
+  - 英语面试：
+    - 自我介绍；
+    - 说一下媒体大数据是什么。
+
+  面试问题大概如上，面试还是很快地，面试完基本就可以走了，回去等着邮件通知是否通过即可，没有通过的还可以继续申报9月份的推免面试，这次是和本校学生一起竞争，所以竞争会更加激烈。还是一句话：”得机试者得天下“，感觉真是羡慕搞过ACM的同学，分分钟AC各种题目。
 
 #### 3. 北航计算机
 
