--- a/_posts/2016-08-22-南大、清华、北大、上交、复旦、北航、哈工大、中科院保研受苦记.markdown
+++ b/_posts/2016-08-22-南大、清华、北大、上交、复旦、北航、哈工大、中科院保研受苦记.markdown
@@ -142,9 +142,28 @@ date: 2016-08-22 15:32:24.000000000 +09:00
 
 #### 3. 北航计算机
 
-- 网址：
-- 时间：
+- 网址：[报考2017年北航计算机学院硕士研究生 7月11~12日暑期宣传活动通知](http://scse.buaa.edu.cn/buaa-css-web/toTemplateAction.action?baseTemplateId=5849c5bd-9d91-4b4a-ad6b-1f4acbb781e7&templateType=ARTICLE_TEMPLATE&curSelNavId=NOTICE_PUBLICITY&language=0)
+
+- 时间：7月11日~7月12日
+
+- 入营条件：对于东北大学学生，绩点排名前5%基本会有入营资格
+
+- 吃住补助：什么都不报销！！！！不论吃的、住的！！！！
+
 - 参营记录：
+
+  从复旦回来一天后，我就到了北航参加北航计算机夏令营，北航听说这次入营的有500多人，所以不包吃住很正常，因为根本管不过来。
+
+  北航夏令营只有两天，第一天机试，第二天面试，空余时间可以提前找一找联系的老师。北航有一个免机试政策，就是有CCF（计算机职业资格认证考试）成绩的同学，只要成绩在200分以上，带着成绩单去就可以免机试，还是不错的，可以省去机试好好准备面试了。
+
+  下面说一下机试，北航机试一共就两个题，分两场，两场题目不一样，做完只会显示是否编译通过，不会有任何错误提示信息，所以做完你也不知道是不是能把所有样例都通过，比较坑。我所参加的那场题目如下：
+
+  - 找出一串数字中，连续递增子串的最大个数
+  - 哈弗曼树构造，编码
+
+  北航不同的是机试不通过的话，是无法参加面试，而且面试是需要交100块钱的。面试的话，你需要学会去引导老师，让他去问你知道的东西，这样你才能把自己的优势展现出来。
+
+  面试结束后，千万不要走，因为晚上会贴出拟录取名单，第二天还会给你发拟录取证明，这个是不能代领的，所以面试结束最好先别急着走，等你拿到拟录取名单，就可以安安心心回家了。
 
 #### 4. 哈工大计算机
 
