--- a/_posts/2016-08-22-南大、清华、北大、上交、复旦、北航、哈工大、中科院保研受苦记.markdown
+++ b/_posts/2016-08-22-南大、清华、北大、上交、复旦、北航、哈工大、中科院保研受苦记.markdown
@@ -167,9 +167,32 @@ date: 2016-08-22 15:32:24.000000000 +09:00
 
 #### 4. 哈工大计算机
 
-- 网址：
-- 时间：
+- 网址：没有通知，我是当时加了一个哈工大保研群才知道哈工大计算机的保研面试安排，群号：212632913
+
+- 时间：7月17号
+
+- 入营条件：感兴趣都可以去面试
+
 - 参营记录：
+
+  哈工大计算机推免面试是分面试点的，当时在东大有一个面试点，而且一两天后就会出结果和你签拟录取证明，从而省下你专门跑到哈尔滨面试，还是很人性化的。哈工大面试分三个老师分别面试，分别面试三个方面：逻辑思维、专业知识、动手能力，老师都很和蔼的，根本不用紧张。下面是面试问到的问题：
+
+  - 逻辑思维
+    - 给你一道逻辑题，让你选出正确答案；
+    - 家乡是哪儿，毕竟是在哈尔滨，怕有些同学适应不了环境；
+    - 高考成绩等唠嗑性问题。
+  - 专业知识
+    - 大学什么科目学的比较好
+    - B树是什么，主要作用是什么；
+    - B树在数据库中如何应用；
+    - 给你很多学生的成绩，如何利用B树来进行检索；
+    - 反正基本围绕B树，因为是我引导的老师到这个问题上的；
+    - 机器学习了解多少。
+  - 动手能力
+    - 做过的项目；
+    - 涉及到的算法有什么。
+
+  面试完一两天基本就会出结果，我在签协议的时候，老师是这样和我说的：虽然我们不想招软件学院的学生，但是学校给的要求是：只要是985院校的学生，但凡不是特别差的，就都招了吧。。。所以，想要报哈工大或者想找一个保底的学校，千万不要放弃这个机会。
 
 #### 5. 中科院软件所
 
