--- a/_posts/2016-08-22-南大、清华、北大、上交、复旦、北航、哈工大、中科院保研受苦记.markdown
+++ b/_posts/2016-08-22-南大、清华、北大、上交、复旦、北航、哈工大、中科院保研受苦记.markdown
@@ -116,29 +116,29 @@ date: 2016-08-22 15:32:24.000000000 +09:00
   - 第一题类似迷宫问题，利用BFS求解，一个n*n个方格组成的方阵，里面可能有若干个门，每个门对应着一把钥匙，钥匙会出现在某个方格中，所以要想开门就必须先把钥匙拿到，你需要给出从起点到终点的可能路径之和，迷宫会有多种多样。三个小问分别是：
 
 
-  - 对于1*n的迷宫，求出问题的解。
-  - 对于n*n的迷宫，没有门，求出问题的解。
-  - 对于n*n的迷宫，有门，求出问题解。
+- 对于1*n的迷宫，求出问题的解。
+- 对于n*n的迷宫，没有门，求出问题的解。
+    - 对于n*n的迷宫，有门，求出问题解。
 
 
-  - 第二题貌似是车过桥问题，由于桥有限高，所以车需要有不同的装载方案来过不同的桥，貌似需要求解出装载方案，这个题没有仔细看。
-  - 第三题很常规的一道ACM字符串题目，具体题目记不太清，但是主要考察你在特别大的数量级下能否在规定时间内求出解。
+-   第二题貌似是车过桥问题，由于桥有限高，所以车需要有不同的装载方案来过不同的桥，貌似需要求解出装载方案，这个题没有仔细看。
+-   第三题很常规的一道ACM字符串题目，具体题目记不太清，但是主要考察你在特别大的数量级下能否在规定时间内求出解。
 
-  下面说一下面试。面试分两组，而且有专业面试和英语面试两个环节，每组同学到相应的组面试，面试问题大概如下：
+    下面说一下面试。面试分两组，而且有专业面试和英语面试两个环节，每组同学到相应的组面试，面试问题大概如下：
 
-  - 专业面试：
-    - 自我介绍；
-    - 介绍项目，做过什么，项目具体内容是什么；
-    - 机器学习了解多少，如何学习的；
-    - 说一下神经网络的优点缺点；
-    - 自我感觉机试做的怎么样；
-    - 学院院长是谁；
-    - 选好导师没有。
-  - 英语面试：
-    - 自我介绍；
-    - 说一下媒体大数据是什么。
+    - 专业面试：
+      - 自我介绍；
+      - 介绍项目，做过什么，项目具体内容是什么；
+      - 机器学习了解多少，如何学习的；
+      - 说一下神经网络的优点缺点；
+      - 自我感觉机试做的怎么样；
+      - 学院院长是谁；
+      - 选好导师没有。
+    - 英语面试：
+      - 自我介绍；
+      - 说一下媒体大数据是什么。
 
-  面试问题大概如上，面试还是很快地，面试完基本就可以走了，回去等着邮件通知是否通过即可，没有通过的还可以继续申报9月份的推免面试，这次是和本校学生一起竞争，所以竞争会更加激烈。还是一句话：”得机试者得天下“，感觉真是羡慕搞过ACM的同学，分分钟AC各种题目。
+    面试问题大概如上，面试还是很快地，面试完基本就可以走了，回去等着邮件通知是否通过即可，没有通过的还可以继续申报9月份的推免面试，这次是和本校学生一起竞争，所以竞争会更加激烈。还是一句话：”得机试者得天下“，感觉真是羡慕搞过ACM的同学，分分钟AC各种题目。
 
 #### 3. 北航计算机
 
@@ -196,9 +196,33 @@ date: 2016-08-22 15:32:24.000000000 +09:00
 
 #### 5. 中科院软件所
 
-- 网址：
-- 时间：
+- 网址：[中国科学院大学2016年全国大学生“软件与网络”夏令营通知](http://www.is.cas.cn/yjsjy/zsxx/201605/t20160524_4608413.html)
+
+- 时间：7月18日-7月23日
+
+- 入营条件：对于东北大学学生，绩点排名前20%基本都会有入营资格
+
+- 吃住补助：报销去程车票，提供住宿（学生公寓、两人间、环境感觉不好），给100元的饭卡，可在食堂和超市消费。
+
 - 参营记录：
+
+  原本我并没有报名软件所的夏令营，只是报名了计算所得夏令营，因为我以为中科院只能报名一个研究院。但是计算所好像不是特别欢迎软件工程专业的学生，所以对于计算所，软件学院入营的同学屈指可数，而计算机学院入营的同学有十几个吧，最后我也没有入营计算所。原本我以为我的夏令营就结束了，但是在软件所开营的前一天，我和另一个同样没有报名的同学得到消息说没有报名可以去现场报名，于是我们当天晚上头脑一热，就买了去北京的**硬座**，连夜坐到北京，准备霸面。在前一天去北京的车上，我们提前联系了几个老师，说明了情况。
+
+  第二天造成到北京后，我们直奔中科院。由于没有任何计划，也不知道去了联系哪个老师，如何临时报名，就一直在软件所里面呆坐着。幸运的是直到下午，在同学和一个软件所学姐的帮助下，我们找到了软件所研究生办事处主任李彩丽老师，提交了部分材料，办了手续，领了公寓钥匙，才算报了名。（顺便说一句，李彩丽老师人特别好，有什么问题她都会尽量帮忙的！）由于软件所夏令营持续到23号，而我和另一个同学当时22号还要去参加华科夏令营，由于某些原因，我们经过了长时间的心理斗争，才决定放弃华科的夏令营。至此，我的软件所夏令营才幸运的开始，所以，保研过程中的许多机会都需要去争取的，运气也是很重要的，即使有时候觉得不可能，也要试一试，说不定运气好就得到了这个机会！
+
+  下面正式来介绍一下软件所夏令营。软件所夏令营为期6天，来来回回基本就一个星期了。这6天里，第一天报道，然后接下来两天一样的听报告，但是在第二天听报告的下午需要填报两个实验室的志愿，这个志愿其实只有第一志愿有用，填完志愿后会当场统计人数，看有没有扎堆，如果有的话，可以当场改志愿，让每个实验室人数尽量平衡。关于各个实验室的好坏，这里有一篇挺公正的介绍——[中科院软件所各实验室情况简要介绍](http://www.cskaoyan.com/thread-161418-1-1.html)，总的来说：软工中心最好，人机最差，学弟学妹填志愿的时候要注意，当然最好的实验室报的人也最多，录取比例当然更低。我当时报名的是天基和国重。
+
+  报完志愿后，第二天各个实验室就都开始各自的考核了，有的有机试、笔试、面试，有的只有笔试和面试，由于我报的天基，那么我只能说一说天基的考核方式了。天基只有笔试和面试，笔试的话其实考的都是很基础的东西，包括OS、计网、机组（考了很多选择）、数学、数据结构、算法等，平常认真考试的话，基本没什么问题。
+
+  下面说一下面试，面试最主要的就是3分钟的个人介绍PPT，所有老师提问都是通过你的PPT来提问，所以这个PPT需要发话少说，把你最精彩的部分讲出来，但是所有部分需要尽量真实，最好不要给自己挖坑跳就可以了，自我介绍完会有一个英文问答题目，然后就是提问时间了，我被问到的问题有：
+
+  - 机器学习了解哪些算法；
+  - 逻辑回归和线性回归的区别是什么；
+  - 如果想要进王浩老师组（因为我提前联系的这个老师），想做什么？
+
+  软件所面试大概就是这样了，接下来就可以回去等官网公示优秀营员了。这次的录取比例没有说的那么高，除国重实验室很多老师单独招生比较特殊外，所有实验室基本是50%的录取率。
+
+  需要提一下，天基里面只有王浩老师的研究组还不错，其他的话就千万不要考虑了！！！！
 
 ### 报名未能参加的夏令营
 
