--- a/_posts/2016-08-22-南大、清华、北大、上交、复旦、北航、哈工大、中科院保研受苦记.markdown
+++ b/_posts/2016-08-22-南大、清华、北大、上交、复旦、北航、哈工大、中科院保研受苦记.markdown
@@ -124,7 +124,7 @@ date: 2016-08-22 15:32:24.000000000 +09:00
 -   第二题貌似是车过桥问题，由于桥有限高，所以车需要有不同的装载方案来过不同的桥，貌似需要求解出装载方案，这个题没有仔细看。
 -   第三题很常规的一道ACM字符串题目，具体题目记不太清，但是主要考察你在特别大的数量级下能否在规定时间内求出解。
 
-    下面说一下面试。面试分两组，而且有专业面试和英语面试两个环节，每组同学到相应的组面试，面试问题大概如下：
+          下面说一下面试。面试分两组，而且有专业面试和英语面试两个环节，每组同学到相应的组面试，面试问题大概如下：
 
     - 专业面试：
       - 自我介绍；
@@ -226,14 +226,49 @@ date: 2016-08-22 15:32:24.000000000 +09:00
 
 ### 报名未能参加的夏令营
 
-#### 1. 清华
+这一部分是我报名相应学校夏令营后，对方没有给予我入营资格或者由于某些原因我没有去的学校。
 
-#### 2. 北大
+#### 1. 清华计算机
 
-#### 3. 上交
+- 网址：[关于举办2016年暑期全国优秀大学生夏令营的预通知](http://www.cs.tsinghua.edu.cn/publish/cs/4723/2016/20160505085141209166544/20160505085141209166544_.html)
+- 时间：7月16日－7月18日
+- 入营条件：我觉得基本只有专业第一可以去吧，除非你在科研竞赛特别优秀，否则基本没戏。注意这个只能是直博。
+- 具体介绍：参考信息安全章博亨大神的日志：[南大、清华、北大、上交、中科院、北航等高校夏令营保送经历](http://www.jianshu.com/p/89e6a9352cbc?utm_campaign=maleskine&utm_content=note&utm_medium=reader_share&utm_source=weixin&from=timeline&isappinstalled=0)
+
+#### 2. 北大信科
+
+- 网址：[北京大学信息科学技术学院关于举办2016年信息学科优秀大学生夏令营的通知（第一轮）-北京大学信息科学技术学院](http://eecs.pku.edu.cn/index.aspx?menuid=4&type=articleinfo&lanmuid=116&infoid=4242&language=cn)
+- 时间：7月13日-7月15日
+- 入营条件：北大信科除了对绩点排名要求前5%外，还需要有很高的综合素质，所以成绩不是唯一因素，这次入营的软件工程专业的同学有两个，分别排名第2名和第11名。
+- 具体介绍：参考章博亨大神的日志：[南大、清华、北大、上交、中科院、北航等高校夏令营保送经历](http://www.jianshu.com/p/89e6a9352cbc?utm_campaign=maleskine&utm_content=note&utm_medium=reader_share&utm_source=weixin&from=timeline&isappinstalled=0)，还有胡少晗大神的保研经历（目前还没有链接，有了的话我会更新）
+
+#### 3. 上交计算机
+
+- 网址：上交计算机没有夏令营，只有一个直硕面试，这个是没有网址的，但是这个和上交软件夏令营是同时开始报名的，可以关注一下：[关于上海交通大学“2017软件工程优才夏令营”的通知](http://yjwb.seiee.sjtu.edu.cn/yjwb/info/11369.htm)
+- 时间：貌似是7月2号，挤不太清楚了，反正只有一天时间，可以当天去当天回。
+- 入营条件：前面有提到，上交计算机只给一个专业一个直硕名额、一个直博名额，所以谁名次高，谁就有机会去（也不一定，还是报名试试吧）。
+- 具体介绍：
+
+  对于我个人来说，我当初以为我能获得面试资格，就提前联系了几个老师，其中和[申瑞民](http://www.cs.sjtu.edu.cn/PeopleDetail.aspx?id=82)老师和[朱其立](http://www.cs.sjtu.edu.cn/PeopleDetail.aspx?id=63)老师分别进行了视频面试，他们都同意只要我获得上交直硕面试资格，参加考核，就收我作为他们的研究生，可惜我并没有获得直硕面试资格，所以比较遗憾。（朱其立老师英文名是Kenny Zhu，这个老师可能从国外回来的老师，所以他和我Skype的是时候全程英文交流，还是需要准备一下，具体考核方式可以参照章博亨大神的日志上交那部分：[南大、清华、北大、上交、中科院、北航等高校夏令营保送经历](http://www.jianshu.com/p/89e6a9352cbc?utm_campaign=maleskine&utm_content=note&utm_medium=reader_share&utm_source=weixin&from=timeline&isappinstalled=0)）
 
 #### 4. 中科院计算所
 
+- 网址：[“计算未来”全国大学生计算技术暑期研修班招生简章](http://www.ict.cas.cn/shye/tzgg/201605/t20160513_4601562.html)
+- 时间：7月17-7月23日
+- 入营条件：之前提到，计算所不太喜欢收软件学院的学生，所以每个专业只给一两个名额，谁名次高谁就可以去
+- 具体介绍：参考章博亨大神的日志：[南大、清华、北大、上交、中科院、北航等高校夏令营保送经历](http://www.jianshu.com/p/89e6a9352cbc?utm_campaign=maleskine&utm_content=note&utm_medium=reader_share&utm_source=weixin&from=timeline&isappinstalled=0)
+
 #### 5. 华科
 
+- 网址：[关于举办“2016年华中科技大学计算机学院优秀大学生夏令营”活动的通知](http://cs.hust.edu.cn/tongzhi/xq?id=10581&type=50)
+
+- 时间：7月21-7月22日
+
+- 入营条件：985排名前15%，或者你在竞赛方面有突出表现+可以获得保研资格
+
+- 具体介绍：
+
+  华科由于和软件所时间重了，所以我没有去，据说华科只有机试，3道题，一个半小时，人工判题，比较简单，985的同学去了基本可以拿到优秀营员，也是个不错的选择。
+
 ## 一些体会
+
