--- a/_posts/2016-08-22-南大、清华、北大、上交、复旦、北航、哈工大、中科院保研受苦记.markdown
+++ b/_posts/2016-08-22-南大、清华、北大、上交、复旦、北航、哈工大、中科院保研受苦记.markdown
@@ -125,7 +125,7 @@ date: 2016-08-22 15:32:24.000000000 +09:00
   下面说一下面试。面试分两组，而且有专业面试和英语面试两个环节，每组同学到相应的组面试，面试问题大概如下：
 
 
-  - 专业面试：
+- 专业面试：
     - 自我介绍；
     - 介绍项目，做过什么，项目具体内容是什么；
     - 机器学习了解多少，如何学习的；
@@ -133,7 +133,7 @@ date: 2016-08-22 15:32:24.000000000 +09:00
     - 自我感觉机试做的怎么样；
     - 学院院长是谁；
     - 选好导师没有。
-  - 英语面试：
+- 英语面试：
     - 自我介绍；
     - 说一下媒体大数据是什么。
 
@@ -247,7 +247,6 @@ date: 2016-08-22 15:32:24.000000000 +09:00
 - 时间：貌似是7月2号，挤不太清楚了，反正只有一天时间，可以当天去当天回。
 - 入营条件：前面有提到，上交计算机只给一个专业一个直硕名额、一个直博名额，所以谁名次高，谁就有机会去（也不一定，还是报名试试吧）。
 - 具体介绍：
-
   对于我个人来说，我当初以为我能获得面试资格，就提前联系了几个老师，其中和[申瑞民](http://www.cs.sjtu.edu.cn/PeopleDetail.aspx?id=82)老师和[朱其立](http://www.cs.sjtu.edu.cn/PeopleDetail.aspx?id=63)老师分别进行了视频面试，他们都同意只要我获得上交直硕面试资格，参加考核，就收我作为他们的研究生，可惜我并没有获得直硕面试资格，所以比较遗憾。（朱其立老师英文名是Kenny Zhu，这个老师可能从国外回来的老师，所以他和我Skype的是时候全程英文交流，还是需要准备一下，具体考核方式可以参照章博亨大神的日志上交那部分：[南大、清华、北大、上交、中科院、北航等高校夏令营保送经历](http://www.jianshu.com/p/89e6a9352cbc?utm_campaign=maleskine&utm_content=note&utm_medium=reader_share&utm_source=weixin&from=timeline&isappinstalled=0)）
 
 #### 4. 中科院计算所
@@ -260,13 +259,16 @@ date: 2016-08-22 15:32:24.000000000 +09:00
 #### 5. 华科
 
 - 网址：[关于举办“2016年华中科技大学计算机学院优秀大学生夏令营”活动的通知](http://cs.hust.edu.cn/tongzhi/xq?id=10581&type=50)
-
 - 时间：7月21-7月22日
-
 - 入营条件：985排名前15%，或者你在竞赛方面有突出表现+可以获得保研资格
-
 - 具体介绍：
 
   华科由于和软件所时间重了，所以我没有去，据说华科只有机试，3道题，一个半小时，人工判题，比较简单，985的同学去了基本可以拿到优秀营员，也是个不错的选择。
 
 ## 一些体会
+
+通过这次夏令营，有一下几个体会，也当做给学弟学妹的一些建议吧。
+
+- 保研不像想象中的那么容易。很多985院校的同学以为只要成绩好，保研到好学校很容易，其实并不是，因为有很多你不认识的人，他们比你学校好，成绩优异，科研竞赛经历丰富。所以成绩并不能代表一切，它最多只能是一块儿敲门砖，把你带到你想进的夏令营，但当你进入夏令营后，决定你水平的不单单是成绩，更重要的是综合素质，比如基础知识、编程能力、语言表达能力等种种因素。如何利用你三年学到的知识拿到优秀营员才是关键。不要总想着拿成绩说事，try to prove it!
+- 抓住一切可能的机会。保研的路上，你可能觉得身心俱疲，可能觉得这个机会没什么价值，可能觉得这个机会哪有那么容易获得，如果是那么也不会是留给我的，我还是一遍歇着吧。但我想说的是，千万不要因为你的懒惰，你的想当然，让一个又一个机会从你手中溜走，因为任何事情只有尝试后，你才有资格评价，而且很多时候，这个机会就是为你准备的，你不去争取，你就一无所获。就像阿姆的《Lose yourself》歌词所说：Look, if you had one shot, or one opportunity to seize everything you ever wanted. In one moment, would you capture it, or just let it slip? 我想选择前者总是没有错的。
+- 机会留是给有准备的人。通过这次保研，我感受最深的就是机试，真的是”得机试者得天下“。机试一直是我的薄弱之处，虽然在努力刷题提高机试水平，但是由于我没有参加过ACM，意识到的时间晚，没有时间去准备机试，所以短短的时间是无法有质的飞跃，导致我在机试上摔了一次又一次，”成功地“与很多到手的机会失之交臂，痛悔不已。所以我希望学弟学妹们一定要好好准备机试，没事多刷题（C/C++，千万不要用Java），到时候才会有临危不乱，秒杀众生的感觉，只要夏令营机试过了，你也就基本没问题了。当然，面试也是要好好准备的，经常复习四大专业课，高数、高代、概率论等数学课，这样到时候大概过一遍就行了。还有一年时间，争取多参加一些科研和竞赛，这是很加分的，如果你能通过这些”套到“一个好导师，何乐而不为呢！最后要说的是，尽早确定下来将来读研的研究方向，早一点去看一些相关专业书，争取利用剩下的一年时间跟老师做一做相关方向的科研，这会对你的简历增加不少光彩！So go for it!
