--- a/_posts/2016-12-08-深度学习论文笔记：Fast R-CNN.md
+++ b/_posts/2016-12-08-深度学习论文笔记：Fast R-CNN.md
@@ -111,12 +111,11 @@ date: 2016-12-08 15:32:24.000000000 +09:00
 
   * RoI pooling层计算损失函数对每个输入变量x的偏导数，如下：
 
-![](https://ww1.sinaimg.cn/large/006tKfTcgw1fbfo7owdcpj306q01mwee.jpg)
-	* y是pooling后的输出单元，x是pooling前的输入单元，如果y由x pooling而来，则将损失L对y的偏导计入累加值，最后累加完R个RoI中的所有输出单元。下面是我理解的x、y、r的关系：
+    ![](https://ww1.sinaimg.cn/large/006tKfTcgw1fbfo7owdcpj306q01mwee.jpg)
 
-```
-<en-media type="image/png" hash="795efae1fdf26a6cfd110736952255c3"/>
-```
+    y是pooling后的输出单元，x是pooling前的输入单元，如果y由x pooling而来，则将损失L对y的偏导计入累加值，最后累加完R个RoI中的所有输出单元。下面是我理解的x、y、r的关系：
+
+    ![20151208163114338](https://ww3.sinaimg.cn/large/006tKfTcgw1fbfoo7cuv7j30qf0ardgq.jpg)
 
 ### 2.4. Scale invariance
 
